--- a/.gitignore
+++ b/.gitignore
@@ -1,38 +1,7 @@
-*~*
-
-# Compiled Object files
-*.slo
-*.lo
-*.o
-*.obj
-
-# Compiled Dynamic libraries
-*.so
-*.dylib
-*.dll
-
-# Fortran module files
-*.mod
-
-# Compiled Static libraries
-*.lai
-*.la
-*.a
-*.lib
-
-# Executables
-*.exe
-*.out
-*.app
-
-# Netbean project files
-*/nbproject/*
-BreakID
-localtests/*
-
-# Latex
-paper/*.aux
-paper/*.bbl
-paper/*.blg
-paper/*.log
-paper/*.pdf
+.*
+*.kdev4
+build/
+experiments/
+paper/
+test_asp/
+test_cnfs/
