--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -22,7 +22,7 @@ add_subdirectory(bliss)
 
 include_directories( ${PROJECT_SOURCE_DIR} )
 include_directories( ${ZLIB_INCLUDE_DIR}   )
-include_directories( ${Boost_INCLUDE_DIRS} )
+# include_directories( ${Boost_INCLUDE_DIRS} )
 
 configure_file("${CMAKE_CURRENT_SOURCE_DIR}/GitSHA1.cpp.in" "${CMAKE_CURRENT_BINARY_DIR}/GitSHA1.cpp" @ONLY)
 configure_file("${CMAKE_CURRENT_SOURCE_DIR}/solvertypesmini.hpp.in" "${CMAKE_CURRENT_BINARY_DIR}/breakid/solvertypesmini.hpp" @ONLY)
@@ -70,7 +70,7 @@ endif()
 
 target_link_libraries(breakid-bin
     breakid
-    ${Boost_LIBRARIES}
+    # ${Boost_LIBRARIES}
 )
 
 add_executable(mytest
@@ -83,7 +83,7 @@ set_target_properties(mytest PROPERTIES
 )
 target_link_libraries(mytest
     breakid
-    ${Boost_LIBRARIES}
+    # ${Boost_LIBRARIES}
 )
 
 
