--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -203,7 +203,7 @@ if (NOT WIN32)
     else()
         add_cxx_flag_if_supported("-mtune=native")
         add_cxx_flag_if_supported("-Wall")
-        add_cxx_flag_if_supported("-Wextra")
+        add_cxx_flag_if_supported("-pedantic")
         add_cxx_flag_if_supported("-Wunused")
         add_cxx_flag_if_supported("-Wsign-compare")
         add_cxx_flag_if_supported("-fno-omit-frame-pointer")
@@ -219,6 +219,7 @@ if (NOT WIN32)
         add_cxx_flag_if_supported("-Wparentheses")
         add_cxx_flag_if_supported("-Wunreachable-code")
         add_cxx_flag_if_supported("-ggdb3")
+        add_cxx_flag_if_supported("-Wno-unused-parameter")
 
         # Apparently needed before OS X Maverics (2013)
         #add_c_flag_if_supported("-stdlib=libc++")
