--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "examples"]
 	path = examples
-	url = git@github.com:msoos/breakid_test_cnfs.git
+	url = git@github.com:meelgroup/breakid_test_cnfs.git
