Cleanup, no more solvertypesmini

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -23,7 +23,6 @@ add_subdirectory(bliss)
 include_directories( ${PROJECT_SOURCE_DIR} )
 
 configure_file("${CMAKE_CURRENT_SOURCE_DIR}/GitSHA1.cpp.in" "${CMAKE_CURRENT_BINARY_DIR}/GitSHA1.cpp" @ONLY)
-configure_file("${CMAKE_CURRENT_SOURCE_DIR}/solvertypesmini.hpp.in" "${CMAKE_CURRENT_BINARY_DIR}/breakid/solvertypesmini.hpp" @ONLY)
 
 include_directories ( ${CMAKE_CURRENT_SOURCE_DIR} )
 include_directories( ${CMAKE_CURRENT_BINARY_DIR} )
@@ -86,14 +85,13 @@ target_link_libraries(mytest
 
 
 breakid_add_public_header(breakid ${CMAKE_CURRENT_SOURCE_DIR}/breakid.hpp )
-breakid_add_public_header(breakid ${CMAKE_CURRENT_BINARY_DIR}/breakid/solvertypesmini.hpp )
 
 # -----------------------------------------------------------------------------
 # Copy public headers into build directory include directory.
 # The breakidConfig.cmake we generate in the build directory depends on
 # this.
 # -----------------------------------------------------------------------------
-set(HEADER_DEST "${PROJECT_BINARY_DIR}/include/breakid")
+set(HEADER_DEST "${PROJECT_BINARY_DIR}/include")
 add_custom_target(CopyPublicHeaders ALL)
 get_target_property(breakid_public_headers breakid PUBLIC_HEADER)
 foreach(public_header ${breakid_public_headers})
